--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,6 +17,18 @@
 </nav>
 
 <style>
+
+@media print, screen and (min-width: 1900px)  {
+  .nav-links li a {
+ 
+    color: #3A3226;
+    font-size: 1.55rem;
+  
+    }
+}
+
+
+
       .c-singlePager {
           position: relative;
           font-size: 20px;
@@ -93,7 +105,7 @@ nav {
   .nav-links li a {
     text-decoration: none;
     color:#3A3226;
-    font-size: 0.95rem;
+
     font-weight: 500;
     padding: 10px 4px;
     transition: all 0.3s ease;
@@ -120,6 +132,7 @@ nav {
     nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
       font-size: 0.98rem;
     }
+
   }
 
 </style>
