--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -35,7 +35,7 @@
               <p>&nbsp;</p>
 
               <p><img src="/kenne.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>写真左&thinsp;:&thinsp;約1年半ほど使用した状態 【&thinsp;革色 グレー&thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;新品のキーケース【&thinsp;革色 グレー&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。<br class="sp"><br class="sp">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
+              <p>写真左&thinsp;:&thinsp;約1年半ほど使用 【&thinsp;革色 グレー&thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;新品のキーケース【&thinsp;革色 グレー&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。<br class="sp"><br class="sp">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
 
                 <h1 class="ttl_1"><span class="line">霞がかったような白いワックス</span></h1>
               <p>&nbsp;</p>
