--- a/src/components/Productlist2.astro
+++ b/src/components/Productlist2.astro
@@ -156,13 +156,13 @@
 
 
 </div>
+
+
 <div class="c-singlePager">
-
-    <a href="productlist2" class="c-singlePager_arrow-next">
-  <span>Next</span>
-</a>
+    <a href="/productlist" class="c-singlePager_arrow-prev">
+    <span>Back</span>
+  </a>
 </div>
-
 
 <style>
 
