--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -158,7 +158,7 @@
 </div>
 <div class="c-singlePager">
 
-    <a href="productlist2" class="c-singlePager_arrow-next">
+    <a href="/productlist2" class="c-singlePager_arrow-next">
   <span>Next</span>
 </a>
 </div>
