--- a/src/components/Henglish.astro
+++ b/src/components/Henglish.astro
@@ -1,4 +1,3 @@
-
 <div class="top-vis-area posi-r">
     <div class="top-visual bg-style">
     <section id="banner">
@@ -22,10 +21,10 @@
           <a href="/"></a>
         </div>
         <ul class="nav-links">
-          <li><a href="/">ホーム</a></li>
-          <li><a href="/kodawari">こだわり</a></li>
-          <li><a href="/productlist">商品</a></li>
-          <li><a href="#">EN</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/kodawari">Quality</a></li>
+          <li><a href="/productlist">Products</a></li>
+        
         </ul>
       </div>
     </nav>
@@ -35,9 +34,9 @@
 <section id="down"  class="introduction astro-HR23OLMI">
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-        <h2  class="introduction__heading astro-HR23OLMI"></h2>
-        <p class="introduction__text astro-HR23OLMI">ピㇼカマブイは、北海道にある小さな工房で主に受注生産にてオーダーを承っており、断裁から総手縫い、仕上げに至るまで、全ての工程を一人の職人が行なっています。
-<br class="pc"><br class="sp"><br class="pc"><br class="sp">革のパーツを色別で選択ができるため、唯一無二の「とくべつな色」に仕上がります。シンプルなデザインに、時間の概念をブレンドした革製品をお届けします。
+        <h2  class="introduction__heading astro-HR23OLMI">ABOUT</h2>
+        <p class="introduction__text astro-HR23OLMI">Pirca Mabui is a small boutique located in Hokkaido, Japan. <br class="sp"><br class="pc">All of our goods are crafted by a single craftsman. and is dedicated to produce the highest quality of handcrafted leather goods as possible.
+          <br class="pc"><br class="pc"><br class="sp"><br class="sp">We hope you enjoy your visit!
   
   </p>
       </div>
@@ -49,6 +48,8 @@
   </section>
 
 <section class="aboutService">
+<h2 class="aboutService_title">SERVICE</h2>
+<p class="aboutService_text">At our store, we also offer 'pattern orders,' where we customize products by changing the type and color of leather.</p>
 <ul class="c-bannerList">
   <li class="c-bannerList_node">
     <a href="/productlist">
@@ -56,7 +57,7 @@
         <img src="/afheaufhhf.webp" alt="当店の商品画像" >
       </div>
 <h3 class="c-bannerList_title">COLLECTIONS</h3>
-      <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。</p>
+      <p class="c-bannerList_text">In addition to bag products, we actively handle small accessories such as wallets and key cases.</p>
     </a>
   </li>
   <li class="c-bannerList_node">
@@ -65,7 +66,7 @@
         <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
       <h3 class="c-bannerList_title">PATTERN ORDER</h3>
-      <p class="c-bannerList_text">パーツごとにお好みの革の色組み合わせ、金具などをお選びいただいて製作するセミオーダーを承っております。</p>
+      <p class="c-bannerList_text">We offer semi-custom orders where you can choose your preferred leather colors, hardware, and combinations for each part.</p>
     </a>
   </li>
   <li class="c-bannerList_node">
@@ -74,7 +75,7 @@
         <img src="/leatherhosii-min.webp" alt="当店の画像について" >
       </div>
       <h3 class="c-bannerList_title">ABOUT SHOP</h3>
-      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span style="color: #999999;">画像引用:https://virgilioconceriaartigiana.it</span> </center></p>
+      <p class="c-bannerList_text">We introduce our carefully selected premium materials and our dedication to quality.<br><br><center><span style="color: #999999;">References:https://virgilioconceriaartigiana.it</span> </center></p>
     </a>
   </li>
 </ul>
@@ -119,24 +120,7 @@
       </div>  
     </a>
   </li>
-      <li class="topNews_list_node c-newsList_node">
-    <a href="/web">
-      <div class="topNews_list_columnLeft c-newsList_columnLeft">
-        <div class="topNews_list_info c-newsList_info">
-          <div class="topNews_list_category c-newsList_category">
-            OFFER          </div>
-          <time class="topNews_list_date c-newsList_date">
-                        </time>
-        </div>
-        
-        <h3 class="topNews_list_title c-newsList_title">
-          WEB制作のご依頼         </h3>
-      </div>
-      <div class="topNews_list_img c-newsList_img">
-        <img src="/webjobb.webp">
-      </div>  
-    </a>
-  </li>
+      
 
  
     </ul>
@@ -492,14 +476,14 @@
         font-family: "Shippori Mincho B1",serif;
           margin-top: 2rem;
           transition: .6s 1s;
-          font-size: 0.94rem;
+          font-size: 1rem;
           letter-spacing: .05em;
       }
 
       @media print, screen and (max-width: 767px) {
         .aboutService_text {
           width: auto;
-          font-size: 0.96rem;
+          font-size: 1rem;
           margin: 20px 0 60px;
       
         }
@@ -1321,8 +1305,8 @@ img{
 
     margin-right: 0;
     padding-left: 0;
-}
 
+}
 }
 
 .c-singlePager {
