--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -12,7 +12,7 @@
     <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
     <h2 class="introduction__heading astro-HR23OLMI">
         <span class="ttl_line">トスカーナ州で作られた<br class="sp">バケッタ製法の古典</span></h2>
-    <p class="introduction__text astro-HR23OLMI">Pirca Mabuiで主に扱っている革は、イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革です。<br class="sp"><br class="sp">歴史のある古代のタンニン鞣し製法“バケッタ製法”を蘇らせて誕生させた、表面に毛羽立たせる加工を施した牛革。<br class="u-pc-only"><br class="pc"><br class="sp">化学薬品を一切使用せず、植物性タンニンで時間をかけてじっくりと丁寧に鞣しています。<br class="sp"><br class="sp">表面の起毛は和紙のような独特の風合いでザラザラした肌触りから、使用していくにつれ内側からのオイルが馴染み、3カ月程度で起毛部分が寝て表面はツルツルになり、その後は美しいツヤ肌になっていきます。<br class="sp"><br class="sp">経年変化による革を育てる楽しみが味わえる、高級素材のひとつです。</p>
+    <p class="introduction__text astro-HR23OLMI">ピㇼカマブイで主に扱っている革は、イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革です。<br class="u-pc-only"><br class="pc"><br class="sp">化学薬品を一切使用せず、植物性タンニンで時間をかけてじっくりと丁寧に鞣しています。<br class="sp"><br class="sp">表面の起毛は和紙のような独特の風合いでザラザラした肌触りから、使用していくにつれ内側からのオイルが馴染み、3カ月程度で起毛部分が寝て表面はツルツルになり、その後は美しいツヤ肌になっていきます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">経年変化による革を育てる楽しみが味わえる、高級素材のひとつです。</p>
       <div class="about__button" data-astro-cid-j7pv25f6="">
         <a href="/aboutleather" class="button center" data-astro-cid-vnzlvqnm="">詳細をみる
            <svg viewBox="0 0 24 24" data-astro-cid-vnzlvqnm="" class="button__icon" astro-icon="majesticons:arrow-up-line">
