--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -21,9 +21,9 @@
           <a href="/"></a>
         </div>
         <ul class="nav-links">
-          <li><a href="/">Home</a></li>
-          <li><a href="/kodawari">Quality</a></li>
-          <li><a href="/productlist">Products</a></li>
+          <li><a href="homeEn">Home</a></li>
+          <li><a href="/aboutEn">Quality</a></li>
+          <li><a href="/productlistEn">Products</a></li>
         
         </ul>
       </div>
@@ -34,7 +34,7 @@
 <section id="down"  class="introduction astro-HR23OLMI">
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-        <h2  class="introduction__heading astro-HR23OLMI">ABOUT</h2>
+     
         <p class="introduction__text astro-HR23OLMI">Pirca Mabui is a small boutique located in Hokkaido, Japan. <br class="sp"><br class="pc">All of our goods are crafted by a single craftsman. and is dedicated to produce the highest quality of handcrafted leather goods as possible.
           <br class="pc"><br class="pc"><br class="sp"><br class="sp">We hope you enjoy your visit!
   
@@ -48,11 +48,9 @@
   </section>
 
 <section class="aboutService">
-<h2 class="aboutService_title">SERVICE</h2>
-<p class="aboutService_text">At our store, we also offer 'pattern orders,' where we customize products by changing the type and color of leather.</p>
 <ul class="c-bannerList">
   <li class="c-bannerList_node">
-    <a href="/productlist">
+    <a href="/productlistEn">
       <div class="c-bannerList_img">
         <img src="/afheaufhhf.webp" alt="当店の商品画像" >
       </div>
@@ -95,7 +93,7 @@
                      </time>
         </div>
         <h3 class="topNews_list_title c-newsList_title">
-          サイトのリニューアル          </h3>
+          Website redesign          </h3>
       </div>
       <div class="topNews_list_img c-newsList_img">
         <img src="/webee-minn.webp">
@@ -103,23 +101,6 @@
     </a>
   </li>
 
-  <li class="topNews_list_node c-newsList_node">
-    <a href="https://sdome-event.jp/smv/index.php">
-      <div class="topNews_list_columnLeft c-newsList_columnLeft">
-        <div class="topNews_list_info c-newsList_info">
-          <div class="topNews_list_category c-newsList_category">
-            TOPIC            </div>
-          <time class="topNews_list_date c-newsList_date">
-                     </time>
-        </div>
-        <h3 class="topNews_list_title c-newsList_title">
-          2024・札幌モノビレッジ出店（&thinsp;当選&thinsp;） 6月15,16日        </h3>
-      </div>
-      <div class="topNews_list_img c-newsList_img">
-        <img src="/ot313_2.webp">
-      </div>  
-    </a>
-  </li>
       
 
  
