--- a/src/layouts/Layout7.astro
+++ b/src/layouts/Layout7.astro
@@ -31,8 +31,8 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>商品リスト</title>
-		<meta name="description" content="リーガル" />
+		<title>商品リスト1ページ目</title>
+		<meta name="description" content="商品リスト1ページ目について" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
