--- a/src/pages/homeEn.astro
+++ b/src/pages/homeEn.astro
@@ -6,7 +6,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="We are an online store based in Hokkaido specializing in handmade leather goods.">
+<Layout title="English page home">
   <main>
 
   </main>
