--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -101,7 +101,7 @@
         ・誤配送の際は当店負担とさせていただきます。
       
       確認後、当店より商品返品方法をご案内させていただきます。<br><br>
-      （お届けから一週間以内以上が過ぎますと、返品につきましてはお受けいたしかねますのでご注意下さい。）<br>
+      （お届けから一週間以上が過ぎますと、返品につきましてはお受けいたしかねますのでご注意下さい。）<br>
       製作を開始してからの途中キャンセルや完成後の返品が出来ません。<br class="sp">このため製作開始後のキャンセルはお受け致しかねます。
       <br>※ご連絡がないまま返送された場合には、返品・交換をお受けできませんのでご注意ください。 
 
