--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -25,7 +25,7 @@
           <li><a href="/">ホーム</a></li>
           <li><a href="/kodawari">こだわり</a></li>
           <li><a href="/productlist">商品</a></li>
-          <li><a href="#">EN</a></li>
+          <li><a href="/homeEn">EN</a></li>
         </ul>
       </div>
     </nav>
