--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -81,24 +81,24 @@
   </a>
 </li>
     <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="/smartkey">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          WALLET             </div>
+          SMART KEY            </div>
         <time class="newsList_date c-newsList_date">
                    </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ラウンドウォレット       </h3>
+       スマートキーウォレット       </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
+      <img src="/smartmain.webp">
     </div>
   </a>
 </li>
     <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="/smallwallet">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
@@ -107,15 +107,15 @@
                     </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミニマムウォレット         </h3>
+        ミニマムウォレット Type2       </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
+      <img src="/round2.webp">
     </div>
   </a>
 </li>
     <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="minimam">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
@@ -124,10 +124,10 @@
                     </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミニウォレット            </h3>
+        ミニマムウォレット           </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
+      <img src="/mninibody.webp">
     </div>
   </a>
 </li>
