--- a/src/components/Roundwallet1.astro
+++ b/src/components/Roundwallet1.astro
@@ -31,8 +31,7 @@
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>中心のポケットには、小銭は15~18枚ほど収納が可能です。<br class="sp"><br class="sp">その両脇に2箇所のカードポケット(&thinsp;3枚ほど束ねて収納が可能&thinsp;)・フリーポケットを設けたことで、外観以上の収納力を実現しています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">仕事でサブウォレットとして使用したり、ちょっとしたお出かけにも持ちやすいミニウォレットです。
-                    </p>
+                <p>収納部にはカードポケット(&thinsp;2、3枚ほど束ねて収納が可能&thinsp;)・フリーポケットを設けたことで、折り畳んだ紙幣、鍵を収納したりなど、自分の用途や使い方に合わせて自由に収納することができます。</p> 
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/roiundboud3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
