--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -43,7 +43,7 @@
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/three2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。<br class="sp">その中でも、高級部類のプリムホック挽き物（&ensp;挽き物=素材をくり抜いたり、成形して作られた物のこと&ensp;）を使用しています。<br class="sp"><br class="sp">金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
+                <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。<br class="sp">その中でも、高級部類のプリムホック挽き物（&thinsp;挽き物=素材をくり抜いたり、成形して作られた物のこと&thinsp;）を使用しています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
@@ -63,7 +63,7 @@
                     <a href="/keycasehook" class="c-singlePager_arrow-prev">
                     <span>Back</span>
                   </a>
-                      <a href="/" class="c-singlePager_arrow-next">
+                      <a href="/smartkey" class="c-singlePager_arrow-next">
                     <span>Next</span>
                   </a>
                 </div>
