--- a/src/components/Keycase.astro
+++ b/src/components/Keycase.astro
@@ -35,8 +35,7 @@
 
                 <p><img loading="lazy" src="/keycasepicx3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p><img loading="lazy" src="/keycasepic2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
-                  <br class="pc"><br class="sp">大きさによってはスマートキーも収納可能です。<br class="sp">リングの取り付け位置や高さの都合で取り付けることができない種類もありますのでご注意ください。 <br class="sp"><br class="pc">
+                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。<br class="sp"><br class="pc">大きさによってはスマートキーも収納可能。<br class="pc"><br class="sp"><br class="sp">実際に収納しているスマートキーの大きさ:<br class="sp">【&thinsp;サイズ(cm) 約H6.2 W3.5&thinsp;】<br class="sp"><br class="sp"><br class="pc"><br class="pc"><span class="stripe-marker">リングの取り付け位置や高さの都合で取り付けることができない種類もありますのでご注意ください。</span><br class="sp"><br class="pc">
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasekana.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
