--- a/src/components/HeaderEn.astro
+++ b/src/components/HeaderEn.astro
@@ -6,7 +6,7 @@
         
       </div>
       <ul class="nav-links">
-        <li><a href="homeEn">Home</a></li>
+        <li><a href="/homeEn">Home</a></li>
         <li><a href="/aboutEn">Quality</a></li>
         <li><a href="/productlistEn">Products</a></li>
       
