--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -21,7 +21,7 @@
           <a href="/"></a>
         </div>
         <ul class="nav-links">
-          <li><a href="homeEn">Home</a></li>
+          <li><a href="/homeEn">Home</a></li>
           <li><a href="/aboutEn">Quality</a></li>
           <li><a href="/productlistEn">Products</a></li>
         
