--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -115,7 +115,7 @@
   </a>
 </li>
     <li class="newsList_node c-newsList_node">
-  <a href="minimam">
+  <a href="/minimam">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
