--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 
 <div  class="summary-box column">
 
-    <h1 class="section-heading">当店について</h1>
+    <h1 class="section-heading">こだわり</h1>
    
   </div>
   <br class="sp">
