--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -4,23 +4,24 @@
 <main class="Layout_Main__dLHqI">
     <div class="Home_Contact__nbvJ6">
     <h1 class="Home_Contact_Title__KdAFZ">お問い合わせ</h1>
-    <p class="Home_Contact_Text__3D7zy">お問い合わせは以下のフォームよりお送りください。</p>
+    <p class="Home_Contact_Text__3D7zy">お問い合わせは以下のフォームよりお送りください。<br class="sp"><br class="sp">Please send your inquiry using the form below.</p>
    
 
 <div>
     <form action="https://ssgform.com/s/NHTGZqRshncp" method="post">
-      <label class="Home_Contact_Label__hwNpu" for="name">氏名</label>
+      <label class="Home_Contact_Label__hwNpu" for="name">氏名 (Your name) </label>
       <input  class="Home_Contact_InputText__vKPd7"  required="required" name="name"  placeholder="本名をご記入ください" />
       <label  class="Home_Contact_Label__hwNpu"  for="email">メールアドレス</label>
       <input class="Home_Contact_InputText__vKPd7" id="email" type="email" required="required" name="email" placeholder="info@example.com">    
 
-      <label class="Home_Contact_Label__hwNpu"  for="message">お問い合わせ内容</label>
+      <label class="Home_Contact_Label__hwNpu"  for="message">お問い合わせ内容 (Inquiry content)</label>
       <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5" required="required"> </textarea>
       <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
     </form>
     <br>
     <p class="recaptcha_policy">This site is protected by reCAPTCHA and the Google<a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.</p>
-  </div>
+    <br class="sp"><br class="sp">  
+</div>
 
   
 
