--- a/src/components/Footeren.astro
+++ b/src/components/Footeren.astro
@@ -1,8 +1,8 @@
 <div class="footer02">
     <ul class="menu">
-      <li><a href="/">Home</a></li>
+      <li><a href="/homeEn">Home</a></li>
       <li><a href="/aboutEn">Quality</a></li>
-      <li><a href="/leagal">Terms Of Service</a></li>
+      <li><a href="/teams-of-setvice">Terms Of Service</a></li>
       <li><a href="/contact">Contact Us</a></li>
     </ul>
     <p class="copyright">
@@ -24,7 +24,7 @@
    .footer02 a {
     color: #808080;
     text-decoration: none;
-    font-family: 'Shippori Mincho', sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
     font-size: 0.8rem;
     letter-spacing: .065px;
 
