--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -35,7 +35,7 @@
 <section id="down"  class="introduction astro-HR23OLMI">
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-        <h2  class="introduction__heading astro-HR23OLMI"></h2>
+        <h2  class="introduction__heading astro-HR23OLMI">当店について</h2>
         <p class="introduction__text astro-HR23OLMI">ピㇼカマブイは、北海道にある小さな工房で主に受注生産にてオーダーを承っており、断裁から総手縫い、仕上げに至るまで、全ての工程を一人の職人が行なっています。
 <br class="pc"><br class="sp"><br class="pc"><br class="sp">革のパーツを色別で選択ができるため、唯一無二の「とくべつな色」に仕上がります。シンプルなデザインに、時間の概念をブレンドした革製品をお届けします。
   
