--- a/src/components/Productlisten.astro
+++ b/src/components/Productlisten.astro
@@ -6,150 +6,151 @@
 
 <div class="newsWrapper">
 
-<ul class="newsList c-newsList" id="postList">
-    <li class="newsList_node c-newsList_node">
-  <a href="/keycaseEn">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-                       </div>
-        <time class="newsList_date c-newsList_date">
+  <ul class="newsList c-newsList" id="postList">
+      <li class="newsList_node c-newsList_node">
+    <a href="/keycaseEn">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            KEYCASE              </div>
+          <time class="newsList_date c-newsList_date">
+                        </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+         キーケース        </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/keycasebody.webp">
+      </div>
+    </a>
+  </li>
+  
+  
+      <li class="newsList_node c-newsList_node">
+    <a href="/roundwallet1">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            WALLET             </div>
+          <time class="newsList_date c-newsList_date">
+                       </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+             ミニマムウォレット       </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/roundbody.webp">
+      </div>
+    </a>
+  </li>
+  
+  
+  <li class="newsList_node c-newsList_node">
+    <a href="/keycasehook">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            KEYCASE          </div>
+          <time class="newsList_date c-newsList_date">
+                       </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+               キーケース<br class="sp">(&thinsp;フックタイプ&thinsp;)   </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/jeafiee.webp">
+      </div>
+    </a>
+  </li>
+  
+      <li class="newsList_node c-newsList_node">
+    <a href="/threewallet">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            WALLET           </div>
+          <time class="newsList_date c-newsList_date">
+                     </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+          ３つ折り財布         </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/three1.webp">
+      </div>
+    </a>
+  </li>
+      <li class="newsList_node c-newsList_node">
+    <a href="/smartkey">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            SMART KEY            </div>
+          <time class="newsList_date c-newsList_date">
+                     </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+         スマートキーウォレット       </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/smartmain.webp">
+      </div>
+    </a>
+  </li>
+      <li class="newsList_node c-newsList_node">
+    <a href="/smallwallet">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            WALLET             </div>
+          <time class="newsList_date c-newsList_date">
                       </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+          ミニマムウォレット Type2       </h3>
       </div>
-      <h3 class="newsList_title c-newsList_title">
-        Keycase Wallet        </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/keycasebody.webp">
-    </div>
-  </a>
-</li>
-
-
-    <li class="newsList_node c-newsList_node">
-  <a href="/roundwallet1">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-                      </div>
-        <time class="newsList_date c-newsList_date">
-                     </time>
+      <div class="newsList_img c-newsList_img">
+        <img src="/round2.webp">
       </div>
-      <h3 class="newsList_title c-newsList_title">
-        Small Wallet        </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/roundbody.webp">
-    </div>
-  </a>
-</li>
-
-
-<li class="newsList_node c-newsList_node">
-  <a href="/keycasehook">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-                    </div>
-        <time class="newsList_date c-newsList_date">
-                     </time>
+    </a>
+  </li>
+      <li class="newsList_node c-newsList_node">
+    <a href="/minimam">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            WALLET            </div>
+          <time class="newsList_date c-newsList_date">
+                      </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+          ミニマムウォレット           </h3>
       </div>
-      <h3 class="newsList_title c-newsList_title">
-             Keycase<br class="sp">(&thinsp;With Hook &thinsp;)   </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/jeafiee.webp">
-    </div>
-  </a>
-</li>
-
-    <li class="newsList_node c-newsList_node">
-  <a href="/threewallet">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-                  </div>
-        <time class="newsList_date c-newsList_date">
-                   </time>
+      <div class="newsList_img c-newsList_img">
+        <img src="/mninibody.webp">
       </div>
-      <h3 class="newsList_title c-newsList_title">
-        Trifold Wallet        </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/three1.webp">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          WALLET             </div>
-        <time class="newsList_date c-newsList_date">
-                   </time>
+    </a>
+  </li>
+      <li class="newsList_node c-newsList_node">
+    <a href="/">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            MIDDLEWALLET             </div>
+          <time class="newsList_date c-newsList_date">
+                       </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+          ミドルウォレット            </h3>
       </div>
-      <h3 class="newsList_title c-newsList_title">
-        ラウンドウォレット       </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          WALLET             </div>
-        <time class="newsList_date c-newsList_date">
-                    </time>
+      <div class="newsList_img c-newsList_img">
+        <img src="/coming.webp">
       </div>
-      <h3 class="newsList_title c-newsList_title">
-        ミニマムウォレット         </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          WALLET            </div>
-        <time class="newsList_date c-newsList_date">
-                    </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-        ミニウォレット            </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
-    </div>
-  </a>
-</li>
-    <li class="newsList_node c-newsList_node">
-  <a href="/">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          MIDDLEWALLET             </div>
-        <time class="newsList_date c-newsList_date">
-                     </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-        ミドルウォレット            </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
-    </div>
-  </a>
-</li>
-
-
+    </a>
+  </li>
+  
+  
+  
 
    
 </ul>
