--- a/src/layouts/English5.astro
+++ b/src/layouts/English5.astro
@@ -8,7 +8,7 @@ interface Props {
 const { title,description,image } = Astro.props;
 
 import HeaderEn from "../components/HeaderEn.astro";
-import AboutEn from "../components/AboutEn.astro";
+import LeatherEn from "../components/LeatherEn.astro";
 import Footeren from "../components/Footeren.astro";
 
 import '@fontsource-variable/open-sans';
@@ -28,8 +28,8 @@ import Back from "../components/Back.astro";
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>ABOUT THE SHOP</title>
-		<meta name="description" content="About Our Shop" />
+		<title>About Leather</title>
+		<meta name="description" content="About Our Leather and the highest quality" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
@@ -43,7 +43,7 @@ import Back from "../components/Back.astro";
 
 	<body>
 		<HeaderEn />
-		<AboutEn />
+		<LeatherEn />
 
         <Back />
 		<Footeren />
