--- a/src/components/AboutEn.astro
+++ b/src/components/AboutEn.astro
@@ -2,7 +2,7 @@
 
 <div  class="summary-box column">
 
-    <h1 class="section-heading">ABOUT THE SHOP</h1>
+    <h1 class="section-heading">Our Quality</h1>
    
   </div>
   <br class="sp">
@@ -12,9 +12,9 @@
     <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
     <h2 class="introduction__heading astro-HR23OLMI">
         <span class="ttl_line">The traditional Vacchetta method in the heart of Tuscania, Italy</span></h2>
-    <p class="introduction__text astro-HR23OLMI">The leather primarily used by Pirca Mabui is a shoulder leather with a distinctive surface scratch processing, manufactured by Virgilio Conceria Artigiana located in the Ponte a Egola district of Tuscania, Italy.<br class="u-pc-only"><br class="pc"><br class="sp"><br class="sp"><br class="sp">The surface texture begins with a distinctive feel reminiscent of Japanese washi paper, initially rough to the touch. With use, internal oils blend in, gradually smoothing out the texture over a few months, resulting in a smooth surface. Eventually, it develops a beautiful glossy finish.<br class="pc"><br class="pc"><br class="sp"><br class="sp">It's one of the pleasures to nurture leather through aging, making it a luxury material.</p>
+    <p class="introduction__text astro-HR23OLMI">The leather primarily used by Pirca Mabui is a shoulder leather with a distinctive surface scratch processing, manufactured by Virgilio Conceria Artigiana located in the Ponte a Egola district of Tuscania, Italy.<br class="u-pc-only"><br class="pc"><br class="sp"><br class="sp"><br class="sp">The surface texture begins with a distinctive feel reminiscent of Japanese washi paper, initially rough to the touch. With use, internal oils blend in, gradually smoothing out the texture over a few months, resulting in a smooth surface. Eventually, it develops a beautiful glossy finish.</p>
       <div class="about__button" data-astro-cid-j7pv25f6="">
-        <a href="/aboutleather" class="button center" data-astro-cid-vnzlvqnm="">Learn more
+        <a href="/aboutleatherEn" class="button center" data-astro-cid-vnzlvqnm="">Learn more
            <svg viewBox="0 0 24 24" data-astro-cid-vnzlvqnm="" class="button__icon" astro-icon="majesticons:arrow-up-line">
                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m12 5 6 6m-6-6-6 6m6-6v14">
                     </path></svg></a></div>
@@ -24,8 +24,8 @@
     
     
     <figure class="introduction__map astro-HR23OLMI">
-    <img src="/fleeee-min.webp" alt="革の説明" class="astro-HR23OLMI">
-            <br><center><span style="color: #999999;">画像引用:https://virgilioconceriaartigiana.it</span>  </center>
+    <img src="/fleeee-min.webp" alt="about leather" class="astro-HR23OLMI">
+            <br><center><span style="color: #999999;">References:https://virgilioconceriaartigiana.it</span>  </center>
           </figure>
   </section>
 
@@ -33,11 +33,11 @@
   <section class="introduction astro-HR23OLMI">
     <div class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-      <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">歴史と伝統が紡ぐ、上質な麻糸</span> </h2>
-      <p class="introduction__text astro-HR23OLMI">フランスの1847年創業の高級麻糸「&thinsp;Fil Au Chinois&thinsp;」を使用しています。エルメスをはじめ、多くの高級メゾンやこだわりを持つ職人達に愛用されているロウ引き麻糸です。<br class="sp"><br class="sp">19世紀末当時の作り方で熟練の職人の手によって製造されているこの麻糸は、丈夫な天然亜麻から作られています。</p></div>
+      <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">Exquisite linen threads, woven with the threads of history and tradition</span> </h2>
+      <p class="introduction__text astro-HR23OLMI">We use the premium hemp thread 'Fil Au Chinois,' established in France in 1847.This waxed hemp thread is favored by many luxury maisons, including Hermès, and artisans with discerning tastes.<br class="sp"><br class="sp">This hemp thread, crafted by skilled artisans using techniques from the late 19th century, is made from sturdy natural flax.</p></div>
       <figure class="introduction__map astro-HR23OLMI">
-      <img src="/fefeknfefee-min.webp" alt="糸の説明" class="astro-HR23OLMI">
-              <br><center><span style="color: #999999;">画像引用:https://filauchinois.com/</span>  </center>
+      <img src="/fefeknfefee-min.webp" alt="threads" class="astro-HR23OLMI">
+              <br><center><span style="color: #999999;">References:https://filauchinois.com/</span>  </center>
             </figure>
     </div>
     </section>
@@ -47,13 +47,13 @@
     <section class="introduction astro-HR23OLMI">
       <div class="introduction__container astro-HR23OLMI">
         <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-        <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">400年以上の伝統と音の贅沢</span></h2>
-        <p class="introduction__text astro-HR23OLMI">ドイツの老舗金具メーカー「PRYM&thinsp;(プリム)&thinsp;」同社は他のメーカーとは比べ物にならないほどの長い歴史があり、その歴史は400年以上を誇ります。<br class="sp"><br class="pc"><br class="sp"><br class="pc">金具は少し硬めで、「カチッ」とした高い音が開閉時に聞けることでしょう。<br class="sp"><br class="sp">知る人ぞ知るあの「ドイツホック」を製造していたりと、レザーファンにはたまらない金具を提供し続けてくれているメーカーです。</p>
+        <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">Over 400 years of tradition and the luxury of sound.</span></h2>
+        <p class="introduction__text astro-HR23OLMI">"The renowned German hardware manufacturer 'PRYM' boasts a history spanning over 400 years, unrivaled by any other company in the industry.<br class="sp"><br class="pc"><br class="sp"><br class="pc">The hardware has a slightly firm feel, and you'll likely hear a distinct 'click' sound when opening and closing. Known for producing that iconic 'German clasp' and providing leather enthusiasts with irresistible hardware, this manufacturer is cherished by those in the know.</p>
         </div>
         
         <figure class="introduction__map astro-HR23OLMI">
-        <img src="/fehhfhehfee-min.webp" alt="Prymロゴ" class="astro-HR23OLMI">
-                <br><center><span style="color: #999999;">画像引用:https://www.prym.com/</span>  </center>
+        <img src="/fehhfhehfee-min.webp" alt="Prym" class="astro-HR23OLMI">
+                <br><center><span style="color: #999999;">References:https://www.prym.com/</span>  </center>
               </figure>
       </div>
       </section>
@@ -63,13 +63,13 @@
       <section class="introduction astro-HR23OLMI">
         <div class="introduction__container astro-HR23OLMI">
           <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-          <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">廃業した老舗の逸品</span></h2>
-          <p class="introduction__text astro-HR23OLMI">1945年創業のスイス発の老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp">パーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="sp"><br class="sp"><br class="pc"><br class="pc"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span>
+          <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">A masterpiece from a bygone era</span></h2>
+          <p class="introduction__text astro-HR23OLMI">We use key holders from Amiet, a renowned Swiss hardware manufacturer founded in 1945.It's a captivating piece of hardware crafted from premium materials, robust and beautiful.<br class="sp"><br class="sp"><br class="pc"><br class="pc"><span class="stripe-marker">*Amiet ceased operations in 2021, but we've managed to procure a limited stock for our production, ensuring exclusivity and quality for our customers.</span>
           </p>
           </div>
           
           <figure class="introduction__map astro-HR23OLMI">
-          <img src="/ffasfaf.webp" alt="amietロゴ" class="astro-HR23OLMI">
+          <img src="/ffasfaf.webp" alt="amiet" class="astro-HR23OLMI">
                   <br><center><span style="color: #999999;"></span>  </center>
                 </figure>
         </div>
@@ -126,18 +126,16 @@
                 text-align: center;
                 border-radius: 40px;
                 border: 2px solid var(--color-primary);
-                font-weight: 700;
                 transition-property: color,background;
                 transition-duration: .3s;
-
-                font-family: "Shippori Mincho B1",serif;
+                font-family: 'Open Sans Variable', sans-serif;  
                 font-size: 1rem;
 
             }
 
             @media screen and (min-width: 768px) {
                 .button[data-astro-cid-vnzlvqnm] {
-                    padding:10px 24px;
+                    padding:8px 16px;
                     min-width: 240px;
                 }
              
@@ -327,22 +325,10 @@ img.cover {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
 .summary{
     line-height: 1.65em;
     letter-spacing: .065px;
-  font-family: 'Shippori Mincho', sans-serif;
-
+    font-family: 'Open Sans Variable', sans-serif;
 }
 
 
@@ -364,7 +350,7 @@ img.cover {
     display: block;
     width: 20px;
     height: 2px;
-    background: #eee;
+    background: #1C1C1C;
     position: absolute;
     bottom: 80;
     left: 0;
@@ -384,7 +370,7 @@ img.cover {
     font-size: 1.7rem;
     line-height: 1.65em;
 
-    font-family: 'Shippori Mincho', serif;
+    font-family: 'Open Sans Variable', sans-serif;
 }
 
 
@@ -420,8 +406,8 @@ img.cover {
    
    
    .introduction__heading {
-    font-family: 'Shippori Mincho', sans-serif;
-        font-size: 1.15rem;
+    font-family: 'Open Sans Variable', sans-serif;    
+        font-size: 1.12rem;
         line-height: 1.65em;
        transition: 2s cubic-bezier(.16,1,.3,1);
        font-style: italic;
@@ -430,8 +416,7 @@ img.cover {
    
    
    h1, h2, h3, h4, h5, h6 {
-        font-family: 'Shippori Mincho', sans-serif;
-
+    font-family: 'Open Sans Variable', sans-serif;
        font-size: inherit;
        font-weight: inherit;
        margin: 0;
@@ -440,12 +425,12 @@ img.cover {
    
    
    .introduction__text{
-        font-family: 'Shippori Mincho B1',serif;
-        line-height: 1.65em;
+    font-family: 'Open Sans Variable', sans-serif;
        margin-top: 3.125rem;
        transition: .6s 1s;
        font-size: 1rem;
-       letter-spacing: .065px;
+       line-height: 1.65em;  
+   letter-spacing: .085px;  
 
 
    }
@@ -482,8 +467,7 @@ img.cover {
        line-height: 1.65em;
        color: #333;
        margin: 0;
-       font-family: 'Shippori Mincho', sans-serif;
-
+       font-family: 'Open Sans Variable', sans-serif;
 
    }
 
@@ -516,12 +500,13 @@ img.cover {
     display: block;
     margin: 0;
     width: 100%; /* Make the image take up 100% of the width */
+    padding-left: 0rem;
   }
 
   .introduction__text {
     margin-top: 1.25rem; /* Add space between image and text */
     text-align: left; /* Center text */
-    font-size: 1rem;
+    font-size: 1.05rem;
     padding-top: 30px;
   }
 
