--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -34,8 +34,8 @@
 <section id="down"  class="introduction astro-HR23OLMI">
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-     
-        <p class="introduction__text astro-HR23OLMI">Pirca Mabui is a small boutique located in Hokkaido, Japan. <br class="sp"><br class="pc">All of our goods are crafted by a single craftsman. and is dedicated to produce the highest quality of handcrafted leather goods as possible.
+        <h2  class="introduction__heading astro-HR23OLMI">ABOUT THE SHOP</h2>
+        <p class="introduction__text astro-HR23OLMI">Pirca Mabui is a small boutique located in Hokkaido, Japan. <br class="sp"><br class="pc">All of our goods are crafted by a single craftsman, and is dedicated to produce the highest quality of handcrafted leather goods as possible.
           <br class="pc"><br class="pc"><br class="sp"><br class="sp">We hope you enjoy your visit!
   
   </p>
@@ -68,12 +68,12 @@
     </a>
   </li>
   <li class="c-bannerList_node">
-    <a href="/kodawari">
+    <a href="/aboutEn">
       <div class="c-bannerList_img">
         <img src="/leatherhosii-min.webp" alt="当店の画像について" >
       </div>
-      <h3 class="c-bannerList_title">ABOUT SHOP</h3>
-      <p class="c-bannerList_text">We introduce our carefully selected premium materials and our dedication to quality.<br><br><center><span style="color: #999999;">References:https://virgilioconceriaartigiana.it</span> </center></p>
+      <h3 class="c-bannerList_title">ABOUT THE SHOP</h3>
+      <p class="c-bannerList_text">We're introducing our commitment to quality and attention to detail.<br><br><center><span style="color: #999999;">References:https://virgilioconceriaartigiana.it</span> </center></p>
     </a>
   </li>
 </ul>
@@ -131,7 +131,7 @@
       }
       
       .topNews_title {
-        font-family: "Shippori Mincho",sans-serif;
+        font-family: 'Open Sans Variable', sans-serif;
           font-size: 2rem;
           line-height: 1.7;
           transition: 2s cubic-bezier(.16,1,.3,1);
@@ -234,7 +234,7 @@
       }
       
       .c-newsList_category {
-        font-family: "Shippori Mincho",sans-serif;
+        font-family: 'Open Sans Variable', sans-serif;
         font-size: 1rem;
         margin: 0 0 10px;
       }
@@ -273,7 +273,7 @@
         width: 78%;
         word-break: break-all;
         font-size: 0.94rem;
-        font-family: "Shippori Mincho",sans-serif;
+        font-family: 'Open Sans Variable', sans-serif;
       
       }
       @media print, screen and (max-width: 767px) {
@@ -281,7 +281,7 @@
           width: auto;
           margin: 10px 0 0;
           font-size: 0.96rem;
-          font-family: "Shippori Mincho",sans-serif;
+          font-family: 'Open Sans Variable', sans-serif;
       
         }
       }
@@ -430,7 +430,7 @@
       }
       
       .aboutService_title {
-        font-family: "Shippori Mincho",sans-serif;
+        font-family: 'Open Sans Variable', sans-serif;
           font-size: 2rem;
           line-height: 1.7;
           transition: 2s cubic-bezier(.16,1,.3,1);
@@ -454,11 +454,11 @@
         line-height: 2;
         width: 66.6666%;
         width: 66.6666666667%;
-        font-family: "Shippori Mincho B1",serif;
+        font-family: 'Open Sans Variable', sans-serif;
           margin-top: 2rem;
           transition: .6s 1s;
           font-size: 1rem;
-          letter-spacing: .05em;
+          letter-spacing: .065em;
       }
 
       @media print, screen and (max-width: 767px) {
@@ -518,14 +518,14 @@
 
         .c-bannerList_title {
           font-size: 1.5rem;
-          font-family: "Shippori Mincho",sans-serif;  
+          font-family: 'Open Sans Variable', sans-serif;
           text-align: center;
       
         }
 
         .c-bannerList_text {
    
-        font-size:.96rem;
+        font-size:1.05rem;
       
       }
       }
@@ -548,7 +548,7 @@
       }
       
       .c-bannerList_title {
-        font-family: "Shippori Mincho",sans-serif;
+        font-family: 'Open Sans Variable', sans-serif;
         font-size: 1.6rem;
         line-height: 1.5;
         margin: 20px 0 0px;
@@ -559,8 +559,8 @@
       .c-bannerList_text {
         line-height: 2;
         margin: 20px 0 0px;
-        font-size: 0.94rem;
-        font-family: "Shippori Mincho",sans-serif;
+        font-size: 1.05rem;
+        font-family: 'Open Sans Variable', sans-serif;
       
       }
       
@@ -675,7 +675,7 @@
           font-size: 2rem;
       }
       .font-serif {
-          font-family: "ryo-text-plusn",serif;
+        font-family: 'Open Sans Variable', sans-serif;
       }
       .co-white {
           color: #fff;
@@ -718,7 +718,7 @@
           font-size: 0.8rem;
       }
       .font-serif {
-          font-family: "ryo-text-plusn",serif;
+        font-family: 'Open Sans Variable', sans-serif;
       }
       .co-white {
           color: #fff;
@@ -744,7 +744,7 @@
           font-size: 2.8rem;
       }
       .font-serif {
-          font-family: "ryo-text-plusn",serif;
+        font-family: 'Open Sans Variable', sans-serif;
       }
       .co-white {
           color: #fff;
@@ -777,8 +777,7 @@
           padding: 0.35em 1em;
           position: relative;
           z-index: 1;
-          font-family: 'Shippori Mincho', sans-serif;
-      
+          font-family: 'Open Sans Variable', sans-serif;
           
       }
       #banner{
@@ -825,7 +824,6 @@
       
       #banner {
           color: #fff;
-          font-family: "Open Sans", Helvetica, sans-serif;
           font-weight: 400;
           letter-spacing: 0.075em;
           line-height: 1.65em;
@@ -863,8 +861,8 @@
       
       
       #banner p{
-        font-size: 1.2rem;
-        font-family: 'Shippori Mincho', sans-serif;
+        font-size: 1.3rem;
+        font-family: 'Open Sans Variable', sans-serif;
       
       }
       
@@ -935,6 +933,7 @@
           overflow: hidden;
           position: relative;
           text-align: center;
+          
       }
       
       
@@ -1044,7 +1043,7 @@
       
         #banner p{
         font-size: 1.2rem;
-        font-family: 'Shippori Mincho', sans-serif;
+        font-family: 'Open Sans Variable', sans-serif;
       
       }
 
@@ -1052,14 +1051,6 @@
     }
       
       
-  
-  
-         
-         
-  
-         
-         
-         
          
          .sp {
              display: none !important;
@@ -1073,16 +1064,7 @@
                  display: block !important;
              }
          }
-         
-    
-        
-      
-      
-      
-    
-      
-      
-      
+
       
       
         .introduction{
@@ -1111,17 +1093,19 @@
          
          
          .introduction__heading {
-          font-family: 'Shippori Mincho', sans-serif;
-              font-size: 1.7rem;
-             line-height: 1.7;
-             transition: 2s cubic-bezier(.16,1,.3,1);
+          font-family: 'Open Sans Variable', sans-serif;
+              font-size: 1.4rem;
+              line-height: 1.5em;            
+              transition: 2s cubic-bezier(.16,1,.3,1);
              font-style: italic;
+             letter-spacing: 0.065em;      
+
       
          }
          
          
-         h1, h2, h3, h4, h5, h6 {
-              font-family: 'Shippori Mincho', sans-serif;
+         h1, h3, h4, h5, h6 {
+          font-family: 'Open Sans Variable', sans-serif;
       
              font-size: inherit;
              font-weight: inherit;
@@ -1132,19 +1116,14 @@
          
          
          .introduction__text {
-              font-family: 'Shippori Mincho B1',serif;
-             line-height: 2.3076923077;
-             margin-top: 3.125rem;
+          font-family: 'Open Sans Variable', sans-serif;
+              line-height: 1.65em; 
+              margin-top: 3.125rem;
              transition: .6s 1s;
-             font-size: 0.9375rem;
-             letter-spacing: .05em;
-      
+             font-size: 1rem;
+             letter-spacing: 0.065em;      
       
          }
-
-
-
-
 
 
          @media print, screen and (max-width: 767px) {
@@ -1159,7 +1138,7 @@
         .introduction__text {
           margin-top: 1.25rem; /* Add space between image and text */
           text-align: left; /* Center text */
-          font-size: 0.94rem;
+          font-size: 1.05rem;
         }
 
         .introduction__content{
@@ -1167,17 +1146,20 @@
           text-align: center; /* Center text on smaller screens */
         }
       
-        .introduction__map{
-          display: block;
-          margin: 0;
-          width: 100%; /* Make the image take up 100% of the width */
-        }
-      
+        .introduction__map[data-astro-cid-i4if4fwv] {
+    display: block;
+    flex: 1;
+    margin-right: 0rem;
+    padding-left: 0rem;
+}
+  
       
         .introduction__heading {
           font-size: 1.75rem;
-          line-height: 1.7;
-        }
+          line-height: 1.5;
+          letter-spacing: 0.065em;      
+
+                }
       
         .introduction__content {
              max-width: 80%;
@@ -1217,11 +1199,8 @@
              -webkit-font-smoothing: antialiased;
              text-rendering: optimizeLegibility;
              height: 100%;
-             letter-spacing: .05em;
-             font-size: .8125rem;
-             line-height: 1.6923076923;
-             color: #333;
-      
+             letter-spacing: .065px; 
+            color: #333;
              margin: 0;
 
          }
@@ -1237,7 +1216,6 @@
       }
       
       html {
-          line-height: 1.15;
           -webkit-text-size-adjust: 100%;
           -webkit-tap-highlight-color: transparent
       }
@@ -1255,6 +1233,7 @@
           font-size: inherit;
           font-weight: inherit;
           margin: 0
+
       }
       
       
@@ -1293,7 +1272,7 @@ img{
 .c-singlePager {
           position: relative;
           font-size: 20px;
-          font-family: 'Shippori Mincho', sans-serif;
+          font-family: 'Open Sans Variable', sans-serif;
           margin: 50px 40px 80px;
           padding: 0 0 10px;
       }
@@ -1321,7 +1300,7 @@ nav {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
 
-    font-family: "Shippori Mincho",sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
 
 
   overflow: hidden;
@@ -1366,14 +1345,14 @@ nav {
   .nav-links li a {
     text-decoration: none;
     color:#3A3226;
-    font-size: 0.98rem;
+    font-size: 1rem;
     font-weight: 500;
     padding: 10px 4px;
     transition: all 0.3s ease;
-    line-height: 2.6176470588;
-      letter-spacing: .084em;
-      gap:3.125rem;
-      font-family: "Shippori Mincho",sans-serif;
+    line-height: 1.65em;  
+   letter-spacing: .085px;  
+    gap:3.125rem;
+    font-family: 'Open Sans Variable', sans-serif;
 
   }
 
@@ -1387,12 +1366,14 @@ nav {
     .nav-links li a {
       width: 100%;
       text-align: center;
-      font-size: 0.98rem;
+      font-size: 1rem;
       padding: 0px 0px;
     }
     nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
-      font-size: 0.98rem;
+      font-size:1rem;
     }
+
+
   }
 
 
